# maktaba-web-local

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  _build_header_ar.tex  pyproject.toml  requirements.txt
backend/: config.py  main.py  server_backend.py  srs.py
backend/api/: books_api.py  chat_api.py  dependencies.py  flashcards.py  functions.py  middleware.py  notes.py  quiz.py  search.py
backend/auth/: auth.py
backend/core/: context.py  guards.py  ingestion.py  messages.py  session.py  smalltalk.py  startup.py  state.py
backend/database/: vector_db.py
backend/dialect/: __init__.py  analyze.py  build_dialect.py  dialect_examples.json  dialect_map.json  dialect_processor.py  dialect_prompt.txt  marbert_detector.py
backend/llm/: config.py  offline_llm.py
backend/memory/: fact_extractor.py  storage.py  summarizer.py
backend/rag/: hybrid_retriever.py  hyde.py  multi_query.py  native_embeddings.py  raptor.py  relevance_gate.py  reranker.py
backend/utils/: arabic_normalizer.py  ingestion_ledger.py  language_guard.py
native_engine/: CMakeLists.txt
paper/: PLAIN_LANGUAGE_for_everyone.md  paper_final.md  references.bib  references.md
paper_experiments/: assemble_paper.py  build_bibliography.py  exp2_gate_accuracy.py  exp4_ablation.py  exp_calibration.py
paper_experiments/results/: exp1_cutoffs.json  exp2_gate_accuracy.json  exp4_alpha_ablation.json
papers/: maktaba_web_local_Algorithms_Catalog.md
papers/arabic_bias/: MATERIALS_BRIEF.md  _build_header_v2.tex  _make_fig12.py  _make_figs.py  _make_figs_v2.py  references.bib  (+2 more)
scripts/: build_native_engine.sh  check_native.py  create_keystore.sh  debug_net.py  download_models.ps1  download_models.sh  eval_quality.py  export_bge_m3_onnx.py  export_embedding_onnx.py  prepare_finetune_data.py  reset_to_per_user.ps1  setup_win.ps1  test_native.py  test_onnx.py
tests/: conftest.py  test_auth.py  test_bm25_per_user.py  test_chat_helpers.py  test_dialect_spacing.py  test_guards.py  test_ingestion_ledger.py  test_origin_middleware.py  test_quiz_parsing.py  test_relevance_gate.py  test_smalltalk.py  test_srs.py  test_storage.py  test_storage_concurrency.py  test_text_utils.py
(+49 files in other folders)
