[project]
name = "maktaba-web-local"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # ─── API & Server ───────────────────────────────────
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # ─── LLM ────────────────────────────────────────────
    "groq>=0.9",
    "langchain>=0.2",
    "langchain-core>=0.2",
    "langchain-community>=0.2",
    "langchain-groq>=0.1",
    "langchain-huggingface>=0.0.3",
    "langchain-chroma>=0.1",
    "langchain-text-splitters>=0.2",

    # ─── Vector DB & Embeddings ──────────────────────────
    "chromadb>=0.5",
    "sentence-transformers>=2.7",

    # ─── PDF Processing ──────────────────────────────────
    "pymupdf>=1.24",
    "langdetect>=1.0",
    "unstructured[md]>=0.13",
    "pyarabic>=0.6.15",

    # ─── Web Search ───────────────────────────────────────
    "duckduckgo-search>=6.0",

    # ─── Database ────────────────────────────────────────
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",

    # ─── Task Queue ──────────────────────────────────────
    "celery>=5.3",
    "redis>=5.0",

    # ─── Native Engine ────────────────────────────────────
    "pybind11>=2.12",
    "opencv-python-headless>=4.9",
    "onnxruntime>=1.18",
    "numpy>=1.26",

    # ─── Streaming ───────────────────────────────────────
    "sse-starlette>=1.8",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "ingestion*", "scripts*"]
